back propduction.rb

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -46,7 +46,7 @@
 /* home */
 
 .home-top {
-  background-image: image-url("535998.jpg");
+  background-image: url("535998.jpg");
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
